--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
+    "mongodb": "^3.0.10",
+    "mongoose": "^5.1.4",
     "node-validator": "^0.1.27"
   },
   "devDependencies": {
