--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
@@ -16,6 +17,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
+    "jsonwebtoken": "^8.2.2",
     "mongodb": "^3.0.10",
     "mongoose": "^5.1.4",
     "node-validator": "^0.1.27"
